# apm-agent-php

./: .clang-format  .dockerignore  .editorconfig  .github_changelog_generator  .gitignore  CHANGELOG.asciidoc  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.alpine  LICENSE  README.md  catalog-info.yaml  composer.json  phpcs.xml  phpcs.xml.dist  phpstan.neon  phpunit.xml.dist  phpunit_component_tests.xml  phpunit_component_tests_v8_format.xml  phpunit_v8_format.xml  update-compose.yaml  updatecli-compose.yaml
.ci/: .grenrc.js  (+43 more)
agent/native/: CMakeLists.txt  CMakePresets.json
agent/native/building/cmake/: conan.cmake  elastic_conan_debugsymbols.cmake  elastic_conan_export.cmake  elastic_conan_installer.cmake  elastic_get_git_version.cmake  elastic_set_default_build_options.cmake  test_venv.py
agent/native/building/conan/: conan_profile.in  settings.yml
agent/native/building/dependencies/php72/: conandata.yml
agent/native/building/dependencies/php73/: conandata.yml
agent/native/building/dependencies/php74/: conandata.yml
agent/native/building/dependencies/php80/: conandata.yml
agent/native/building/dependencies/php81/: conandata.yml
agent/native/building/dockerized/: docker-compose.yml
agent/native/ext/: AST_debug.c  AST_debug.cpp  AST_debug.h  AST_instrumentation.c  AST_instrumentation.cpp  AST_instrumentation.h  AST_util.h  ArrayView.h  CMakeLists.txt  ConfigManager.c  ConfigManager.cpp  ConfigManager.h  ConfigSnapshot.h  Hooking.cpp  Hooking.h  MemoryTracker.c  MemoryTracker.cpp  MemoryTracker.h  OptionalBool.h  PhpErrorData.cpp  PhpErrorData.h  ResultCode.h  StringView.h  SystemMetrics.cpp  TextOutputStream.c  TextOutputStream.cpp  TextOutputStream.h  Tracer.cpp  WordPress_instrumentation.cpp  WordPress_instrumentation.h  backend_comm.c  backend_comm.cpp  backend_comm.h  backend_comm_backoff.c  backend_comm_backoff.cpp  backend_comm_backoff.h  basic_macros.h  config.m4  config.w32  constants.h  (+36 more)
agent/native/ext/tests/: config_boolean_0_using_env_var_is_false.phpt  config_boolean_0_using_ini_is_false.phpt  config_boolean_1_using_env_var_is_true.phpt  config_boolean_1_using_ini_is_true.phpt  config_boolean_FaLSe_using_env_var_is_false.phpt  config_boolean_FaLSe_using_ini_is_false.phpt  config_boolean_No_using_env_var_is_false.phpt  config_boolean_No_using_ini_is_false.phpt  config_boolean_OFF_using_env_var_is_false.phpt  config_boolean_OFF_using_ini_is_false.phpt  config_boolean_TRue_using_env_var_is_true.phpt  config_boolean_TRue_using_ini_is_true.phpt  config_boolean_oN_using_env_var_is_true.phpt  config_boolean_oN_using_ini_is_true.phpt  config_boolean_yEs_using_env_var_is_true.phpt  config_boolean_yEs_using_ini_is_true.phpt  config_defaults.phpt  config_dynamic_options.phpt  config_enabled_ini_setting_cannot_be_changed_after_start.phpt  config_ini_has_higher_precedence_than_env_vars.phpt  config_invalid_ini_fallback_default_not_env_var.phpt  config_setting_to_invalid_values_using_env_vars.phpt  config_setting_to_invalid_values_using_ini.phpt  config_setting_to_non-defaults_using_env_vars.phpt  config_setting_to_non-defaults_using_ini.phpt  config_type_LogLevel_is_case_insensitive.phpt  config_type_LogLevel_unambiguous_prefix_is_enough.phpt  opcache_preload_detection.phpt  opcache_preload_detection_double.phpt
agent/native/ext/tests_util/: tests_util.php
agent/native/ext/unit_tests/: CMakeLists.txt  DynamicArray.c  DynamicArray.cpp  DynamicArray_tests.c  DynamicArray_tests.cpp  IntrusiveDoublyLinkedList_tests.cpp  Logger_tests.c  Logger_tests.cpp  MemoryTracker_tests.cpp  ResultCode_tests.c  ResultCode_tests.cpp  StringToStringMap.c  StringToStringMap.cpp  TextOutputStream_tests.c  TextOutputStream_tests.cpp  backend_comm_backoff_tests.cpp  backend_comm_tests.cpp  basic_macros_tests.c  basic_macros_tests.cpp  basic_types_tests.cpp  cmocka_wrapped_for_unit_tests.h  default_test_fixture.cpp  gen_numbered_intercepting_callbacks_src.h  iterateOverCStackTrace_tests.cpp  main.c  main.cpp  mock_alloc.c  mock_assert.cpp  mock_clock.c  mock_clock.cpp  mock_env_vars.c  mock_env_vars.cpp  mock_log_custom_sink.c  mock_log_custom_sink.cpp  mock_log_custom_sink.h  parse_value_with_units_tests.cpp  platform_tests.cpp  time_util_tests.c  time_util_tests.cpp  unit_test_util.cpp  (+2 more)
agent/native/libcommon/: CMakeLists.txt
agent/native/libcommon/code/: AgentGlobals.h  CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  Diagnostics.cpp  Diagnostics.h  ForkableInterface.h  InferredSpans.h  PeriodicTaskExecutor.h  PhpBridgeInterface.h  PhpSapi.h  SharedMemoryState.h  TickGenerator.cpp  TickGenerator.h  elastic_apm_version.h
agent/native/libcommon/test/: CMakeLists.txt  CommonUtilsTest.cpp  InferredSpansTest.cpp  PeriodicTaskExecutorTest.cpp  PhpSapiTest.cpp  SharedMemoryStateTest.cpp  TickGeneratorTest.cpp
agent/native/libphpbridge/: CMakeLists.txt
agent/native/libphpbridge/code/: AutoZval.h  CMakeLists.txt  Debugging.cpp  Exceptions.cpp  Exceptions.h  PhpBridge.cpp  PhpBridge.h
agent/native/loader/code/: CMakeLists.txt  loader.cpp  phpdetection.cpp  phpdetection.h
modernbuild/project/: CMakeLists.txt  CMakePresets.json
modernbuild/project/cmake/: elastic_conan_installer.cmake  elastic_set_default_build_options.cmake
src/ext/unit_tests/: CMakeLists.txt  DynamicArray.c  DynamicArray.h  DynamicArray_tests.c  IntrusiveDoublyLinkedList_tests.c  Logger_tests.c  MemoryTracker_tests.c  StringToStringMap.c  StringToStringMap.h  StringToStringMap_tests.c  TextOutputStream_tests.c  TextOutputStream_tests.h  backend_comm_backoff_tests.c  basic_macros_tests.c  basic_types_tests.c  cmocka_wrapped_for_unit_tests.h  config_tests.c  default_test_fixture.c  default_test_fixture.h  gen_numbered_intercepting_callbacks_src.h  iterateOverCStackTrace_tests.c  main.c  mock_alloc.c  mock_assert.c  mock_assert.h  mock_clock.c  mock_clock.h  mock_env_vars.c  mock_env_vars.h  mock_global_tracer.c  mock_log_custom_sink.c  mock_log_custom_sink.h  mock_php.h  mock_php_ini.c  mock_php_ini.h  mock_stdlib.h  mock_syslog.h  parse_value_with_units_tests.c  platform_tests.c  time_util_tests.c  (+3 more)
(+3305 files in other folders)
